force-app/main/default/objects/AFSC__FS_Template__c/AFSC__FS_Template__c.object-meta.xml
<CustomObject>
    <description>F-Secure Cloud Protection: Notification templates</description>
    <label>FS Template</label>
    <nameField>
        <label>FS Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FS Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>