force-app/main/default/objects/AFSC__FS_Template__c/fields/AFSC__Default_Message__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Default_Message__c</fullName>
    <label>Default Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>