force-app/main/default/objects/AFSC__FS_Template__c/fields/AFSC__Default_Subject__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Default_Subject__c</fullName>
    <label>Default Subject</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>