force-app/main/default/objects/AFSC__FS_Template__c/fields/AFSC__Message__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>